# extractor-pro

./: .gitignore  README.md  assembler_interfaces.txt  audit.py  audit_dataset.py  audit_debug.py  audit_details.txt  batch_run.sh  candidates.txt  chapter3.json  clean_and_validate.py  dataset_tree.txt  dev_check.sh  document_tree.txt  extract.py  jeep214_blocks.txt  merged_page8.txt  page5.txt  page8.txt  questions_dump.txt  repo_snapshot.txt  repo_snapshot_2.txt  report.py  reprocess_pro.py  run_master_pipeline.py  run_pipeline.py  schema_tree.txt  snapshot.py  src_tree.txt  start_dev.sh  test_qwen_api.py  validation.txt
repo_audit/: diff_stat.txt  git_branches.txt  git_log.txt  git_remote.txt  git_status.txt  pyproject.toml  tracked_files.txt  tree.txt
repo_audit/benchmark/: benchmark.py  golden_dataset.py  report.py
repo_audit/config/: layout.yaml
repo_audit/configs/: dataset.yaml  llm.yaml
repo_audit/exporters/: json_exporter.py
repo_audit/parsers/: pdf_parser.py  pdf_parser_v2.py
repo_audit/pipeline/: block_normalizer.py  block_splitter_old.py  document_detector.py  metadata.py  question_classifier.py  section_parser.py
repo_audit/scripts/: analyze_all.py  analyze_pdf.py  audit.py  build_manifest.py  debug_pipeline.py  failure_classifier.py  regression_report.py
repo_audit/src/config/: config.py
repo_audit/tests/: test_config.py  test_detector.py  test_document.py  test_markdown.py  test_pipeline.py  test_question_parser.py  test_rapidocr.py  test_regression_report.py  test_surya.py
repo_audit/validators/: engine.py  schema_validator.py  score.py
(+13961 files in other folders)
